--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -540,7 +540,7 @@
     @include fz(20);
     display: flex;
     justify-content: space-between;
-    padding: 12px 20px;
+    padding: 15px 20px;
     cursor: pointer;
     transition: all 0.3s;
 
@@ -559,7 +559,9 @@
     }
 
     .name {
+      @include fz(18);
       font-weight: 400;
+      letter-spacing: 0.36px;
     }
 
     .price {
@@ -674,6 +676,7 @@
       background-color: #FFF;
       border-radius: 12px;
       // box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+      box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
       overflow: hidden;
       
 
@@ -687,7 +690,7 @@
         }
       }
       &-info {
-        padding: 34px 24px;
+        padding: 34px 24px 38px;
       }
 
       &-name {
@@ -701,6 +704,7 @@
       &-speciality {
         @include fz(18);
         color: $gray_dark;
+        letter-spacing: 0.54px;
         font-weight: 500;
       }
 
@@ -926,7 +930,7 @@
       line-height: 141.556%;
       letter-spacing: 1.35px;
       text-transform: uppercase;
-      margin-bottom: 32px;
+      margin-bottom: 16px;
     }
 
     &-text {
@@ -935,9 +939,12 @@
       line-height: 140%;
       letter-spacing: 0.2px;
 
-      p + p {
-        margin-top: 20px;
-      }
+      p {
+        margin: 0;
+        &:not(:last-of-type) {
+          margin-bottom: 18px;
+        }
+      }     
     }
   }
 
@@ -979,7 +986,7 @@
 
   .about-description {
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 40px;
 
     .row {
       margin-bottom: 80px;
@@ -1032,7 +1039,7 @@
   // prices page
 
   .prices {
-    padding-top: 120px;
+    padding-top: 110px;
     padding-bottom: 80px;
     .row {
       margin-left: -40px;
@@ -1044,7 +1051,7 @@
     }
     .h2 {
       text-align: center;
-      margin-bottom: 60px;
+      margin-bottom: 50px;
     }
 
     // .price-acide {
@@ -1223,6 +1230,7 @@
         background-color: #FFF;
         border-radius: 12px;
         overflow: hidden;
+        box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
 
         &-images {
           .before {
@@ -1608,7 +1616,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 16px 20px;
     cursor: pointer;
     border-bottom: 2px solid $primary;
 
@@ -1816,7 +1824,7 @@
     // display: flex;
     // flex-direction: column;
     display: block;
-    padding: 60px 40px;
+    padding: 50px 40px 60px;
     background-color: $bgc-pink;
     border-radius: 12px;
     box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
@@ -1828,7 +1836,7 @@
       line-height: 145.938%;
       letter-spacing: 0.96px;
       display: block;
-      margin-bottom: 60px;
+      margin-bottom: 46px;
     }
 
     .feedback-form {
