--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -67,6 +67,8 @@ h2, .h2, .ui-h2 {
 	@include fz($h2);
 	line-height: 1.2;	
 	font-weight: 600;
+	text-transform: uppercase;
+	letter-spacing: 1.35px;
 
 	@media (max-width: 959px) {
 		@include fz(40);
@@ -261,8 +263,14 @@ img {
 	}	
 
 	&.ui-btn-tab {
+		height: 68px;
+		border-radius: 40px;
+		padding-left: 38px;
+		padding-right: 38px;
+		@include fz(20);
 		background: #FFF;
 		color: $gray_dark;
+		letter-spacing: 0.6px;
 
 		&.active {
 			background: $pink_btn;
