--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -525,7 +525,7 @@
         margin-bottom: 14px;
       }
 
-      .title {
+      .h4 {
         @include fz(24);
         font-weight: 500;
         line-height:133.333%;
@@ -635,16 +635,25 @@
   }
 
   .doctors-page {
-    padding-bottom: 80px;
+    padding-bottom: 80px;    
     .doctors-wrapper {
       padding-bottom: 0px;
     }    
   }
   .doctors {
-    margin-top: 80px;
+    // margin-top: 80px;
+    padding-top: 80px;
+
+  &.single {
+    padding-top: 70px;
+    padding-bottom: 50px;
+  }
 
     &-wrapper {
       padding-bottom: 60px;
+      &.horizontal {
+        padding-bottom: 0;
+      }
 
       .row + .row {
         margin-top: 32px;
@@ -679,13 +688,16 @@
     &-title {
       text-align: center;
       margin-bottom: 60px;   
-      &.small {
-        @include fz(24);
-        text-transform: unset;
+      &.small {       
         max-width: 760px;
         margin-left: auto;
         margin-right: auto;
-        letter-spacing: 0.12px;
+        .h4 {
+          @include fz(24);
+          font-weight: 600;
+          text-transform: unset;         
+          letter-spacing: 0.12px;
+        }
       }
     }
 
@@ -716,6 +728,12 @@
         padding-bottom: 24px;
         margin-bottom: 24px;
         border-bottom: 2px solid $bgc;
+        .h4 {
+          margin: 0;
+          font-weight: 600;
+          line-height: 133.333%;
+          text-transform: unset;
+        }
       }
 
       &-speciality {
@@ -723,6 +741,9 @@
         color: $gray_dark;
         letter-spacing: 0.54px;
         font-weight: 500;
+        p {
+          margin: 0;
+        }
       }
 
       &-category {
@@ -813,7 +834,7 @@
       margin-bottom: 24px;
       border-bottom: 2px solid $bgc;
 
-      &-name {
+      .h4 {
         color: $font;
         @include fz(24);       
         font-weight: 600;
@@ -872,6 +893,9 @@
       letter-spacing: 0.16px;
       height: 250px;
       overflow: auto;
+      p {
+        margin: 0;
+      }
     }
   }
 
@@ -1144,7 +1168,7 @@
     padding-top: 80px;
     padding-bottom: 80px;
 
-    &-title {
+    .h3 {
       text-align: center;
       margin-bottom: 40px;
     }
@@ -1241,7 +1265,7 @@
     padding-top: 80px;
     padding-bottom: 80px;   
 
-    &-title {
+    .h3 {
       text-align: center;
       margin-bottom: 60px;
     }
@@ -1271,13 +1295,19 @@
                 @include fz(16);
                 line-height: 156.25%;
                 letter-spacing: 0.16px;
+                &:first-child {
+                  @include fz(20);               
+                  font-weight: 500;
+                  line-height: 140%;
+                  margin-bottom: 14px;
+                }
               }
-              .title {
-                @include fz(20);               
-                font-weight: 500;
-                line-height: 140%;
-                margin-bottom: 14px;
-              }
+              // .title {
+              //   @include fz(20);               
+              //   font-weight: 500;
+              //   line-height: 140%;
+              //   margin-bottom: 14px;
+              // }
             }
             .executor-name {
               @include fz(18);
@@ -1321,6 +1351,9 @@
             height: 136px;
             overflow: auto;
             border-bottom: 2px solid $bgc;
+            p {
+              margin: 0;
+            }
           }
 
           .executor + .executor {
@@ -1339,6 +1372,9 @@
               white-space: nowrap;
               display: inline-block;
               width: 100%;
+              p {
+                margin: 0;
+              }
             }
             &-name {
               color: $font;
@@ -1455,8 +1491,7 @@
         }
       }
 
-      &-title {
-        @include fz(24);       
+      .h4 {             
         font-weight: 600;
         line-height: 133.333%;
         margin-bottom: 22px;
@@ -1464,7 +1499,7 @@
         letter-spacing: 0.72px;
       }
 
-      &-subtitle {
+      .h5 {
         color: $gray_dark;
         @include fz(18);       
         font-weight: 600;
@@ -1515,6 +1550,9 @@
           .price-row {
             padding-left: 0;
             padding-right: 0;
+            p {
+              margin: 0;
+            }            
           }
           .name {
             @include fz(20);          
@@ -1555,58 +1593,124 @@
             display: flex;
             align-items: flex-start;
             gap: 15px;
+
+            &::before {             
+              content: '';
+              background-color: $primary;
+              display: inline-block;             
+              width: 20px;
+              height: 20px;
+              border-radius: 50%;
+              flex-shrink: 0;
+              margin-top: 2px;
+              background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10' fill='none'%3E%3Cpath d='M5 1V9' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M1 5H9' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");
+              background-repeat: no-repeat no-repeat;
+              background-position: center center;
+              background-size: 10px 10px;
+            }            
+
+            p {
+              margin: 0;
+              color: $gray_dark;
+              @include fz(18);           
+              font-weight: 400;
+              line-height: 155.556%;
+              letter-spacing: 0.36px;
+            }
+
             &:not(:last-child) {
               margin-bottom: 12px;
             }
           }
-          .icon {
-            display: inline-block;
-            position: relative;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            flex-shrink: 0;
-            margin-top: 2px;
-            &.plus {
-              background-color: $primary;
-              svg {
-                width: 10px;
-                height: 10px;
-              }
-              span {
-                @include fz(14);
-                font-weight: 400;
-                color:#FFF;
-                position: absolute;              
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+          // .icon {
+          //   display: inline-block;
+          //   position: relative;
+          //   width: 20px;
+          //   height: 20px;
+          //   border-radius: 50%;
+          //   flex-shrink: 0;
+          //   margin-top: 2px;
+          //   &.plus {
+          //     background-color: $primary;
+          //     svg {
+          //       width: 10px;
+          //       height: 10px;
+          //     }
+          //     span {
+          //       @include fz(14);
+          //       font-weight: 400;
+          //       color:#FFF;
+          //       position: absolute;              
+          //       top: 50%;
+          //       left: 50%;
+          //       transform: translate(-50%, -50%);
+          //     }
+          //   }
+          //   &.cross {
+          //     background-color: $bgc-pink;
+          //     svg {
+          //       width: 8px;
+          //       height: 8px;
+          //     }
+          //   }
+          //   svg {
+          //     display: inline-block;
+          //     position: absolute;              
+          //     top: 50%;
+          //     left: 50%;
+          //     transform: translate(-50%, -50%);
+          //   }
+          // }
+          // .text {
+          //   margin: 0;
+          //   color: $gray_dark;
+          //   @include fz(18);           
+          //   font-weight: 400;
+          //   line-height: 155.556%;
+          //   letter-spacing: 0.36px;
+          // }
+        }
+
+
+        &.cross {
+          ul {
+            li {
+              &::before {
+                background-color: $bgc-pink;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8' fill='none'%3E%3Cpath d='M1 1L7 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7 1L1 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");
+                background-size: 8px 8px;
               }
             }
-            &.cross {
-              background-color: $bgc-pink;
-              svg {
-                width: 8px;
-                height: 8px;
-              }
-            }
-            svg {
-              display: inline-block;
-              position: absolute;              
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-            }
-          }
-          .text {
-            margin: 0;
-            color: $gray_dark;
-            @include fz(18);           
-            font-weight: 400;
-            line-height: 155.556%;
-            letter-spacing: 0.36px;
           }
         }
+
+        &.check {
+          ul {
+            li {
+              &::before {
+                background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='11' height='9' viewBox='0 0 11 9' fill='none'%3E%3Cpath d='M1 4.5L4 7.5L10 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");                
+                background-size: 11px 9px;
+              }
+            }
+          }
+        }
+
+        &.num {
+          ul {
+            li {
+              counter-increment: num;
+              &::before {
+                content: counter(num);
+                background-image: none;
+                @include fz(14);
+                font-weight: 400;
+                color:#FFF; 
+                text-align: center;                         
+              }
+            }
+          }
+        }
+
       }
 
       &-interwiev {      
@@ -1655,11 +1759,14 @@
           }
           .quote {
             padding-left: 20px;
-            border-left: 4px solid $primary;
-            @include fz(16);            
-            font-weight: 500;
-            line-height: 156.25%;
-            letter-spacing: 0.16px;
+            border-left: 4px solid $primary;           
+            p {
+              margin: 0;
+              @include fz(16);            
+              font-weight: 500;
+              line-height: 156.25%;
+              letter-spacing: 0.16px;
+            }
           }
         }
       }
@@ -1669,7 +1776,7 @@
   .implants {
     padding-top: 80px;
     padding-bottom: 60px;
-    &-title {     
+    .h4 {     
       text-align: center;
       margin-left: auto;
       margin-right: auto;
